--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,26 @@ aiohttp==3.7.4.post0
 asgiref==3.4.1
 async-timeout==3.0.1
 attrs==21.2.0
+backports.entry-points-selectable==1.1.0
 certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.0.6
+distlib==0.3.3
 Django==3.2.8
+filelock==3.3.0
+gunicorn==20.1.0
 idna==3.2
 multidict==5.2.0
+platformdirs==2.4.0
 pyTelegramBotAPI==4.1.0
 pytz==2021.3
 requests==2.26.0
 schedule==1.1.0
+six==1.16.0
 sqlparse==0.4.2
 telepot==12.7
 typing-extensions==3.10.0.2
 urllib3==1.26.7
+virtualenv==20.8.1
+virtualenvwrapper-win==1.2.6
 yarl==1.6.3
